[gd_scene load_steps=7 format=3 uid="uid://dxcx81de68w1"]

[ext_resource type="Script" path="res://src/cards/scenes/character.gd" id="1_nv4eb"]
[ext_resource type="PackedScene" uid="uid://dstuakx4mk33h" path="res://src/point.tscn" id="2_54moe"]
[ext_resource type="Script" path="res://src/MouseEvent.gd" id="2_wk64d"]
[ext_resource type="Script" path="res://src/cards/scenes/Move.gd" id="2_wt56o"]
[ext_resource type="Script" path="res://src/cards/scenes/MoveTarget.gd" id="3_h0cbu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gc14y"]
size = Vector2(10, 4)

[node name="Character" type="CharacterBody2D" node_paths=PackedStringArray("mouse_event")]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_nv4eb")
mouse_event = NodePath("CollisionShape2D/Sprite2D/MouseEvent")
point_scene = ExtResource("2_54moe")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../CollisionShape2D/Sprite2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gc14y")

[node name="Sprite2D" type="Sprite2D" parent="CollisionShape2D"]
position = Vector2(0, -12)

[node name="MouseEvent" type="TextureButton" parent="CollisionShape2D/Sprite2D" node_paths=PackedStringArray("color_rect")]
custom_minimum_size = Vector2(15, 20)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7.5
offset_top = -10.0
offset_right = 7.5
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_wk64d")
hover_color = Color(1, 0, 0, 0.486275)
color_rect = NodePath("ColorRect")

[node name="ColorRect" type="ColorRect" parent="CollisionShape2D/Sprite2D/MouseEvent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0.239216)

[node name="Move" type="Node" parent="." node_paths=PackedStringArray("body", "sprite", "anim")]
script = ExtResource("2_wt56o")
body = NodePath("..")
sprite = NodePath("../CollisionShape2D")
anim = NodePath("../AnimationPlayer")

[node name="MoveTarget" type="Node" parent="." node_paths=PackedStringArray("move")]
script = ExtResource("3_h0cbu")
move = NodePath("../Move")

[node name="PointSpawn" type="Timer" parent="."]
wait_time = 5.0
autostart = true
